--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "react-cusdis": "^2.1.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-notion-x": "^6.16.0"
+    "react-notion-x": "^6.16.0",
+    "rss": "^1.2.2"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.12",
     "@types/node": "^18.11.15",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/rss": "^0.0.32",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.4.7",
