--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-notion-x": "^6.16.0",
+    "react-share": "^5.2.2",
     "rss": "^1.2.2"
   },
   "devDependencies": {
